Network add numbers
Now that we have switched from block to day resolution in dcrdata links,
I think we can also stop tweaking the links to zoom to a specific month.
I don't think many people click those links, and those who do can easily
adjust the zoom.

--- a/journal/202210.md
+++ b/journal/202210.md
@@ -245,29 +245,37 @@ See Politeia Digest [issue 54](https://blockcommons.red/politeia-digest/issue054
 
 { _Hint: n, n.n, and n.nn tell how many decimals to keep, e.g. 100, 16.5, 8.63_ }
 
-**Hashrate**: October's [hashrate](https://dcrdata.decred.org/charts?chart=hashrate&scale=linear&bin=day&axis=time) {_set zoom to show the month_} opened at ~{n} Ph/s and closed ~{n} Ph/s, bottoming at {n} Ph/s and peaking at {n} Ph/s throughout the month.
+**Hashrate**: October's [hashrate](https://dcrdata.decred.org/charts?chart=hashrate&scale=linear&bin=day&axis=time) opened at ~70 Ph/s and closed ~97 Ph/s, bottoming at 65 Ph/s and peaking at 97 Ph/s throughout the month.
 
-Distribution of {} Ph/s hashrate [reported](https://miningpoolstats.stream/decred) by the pools on {date}: {PoolName n%, ...}.
+![](https://raw.githubusercontent.com/bochinchero/dcrsnapshots/main/2022-10/700/Network_Daily_Hashrate.png) { upload }
+
+_Image: Decred hashrate._
+
+Distribution of 84 Ph/s hashrate [reported](https://poolbay.io/crypto/54/decred) by the pools on Nov 1: F2Pool 59%, Poolin 26%, AntPool 5%, BTC.com 4.6%, CoinMine 0.6%.
 
 { _Hint: Fallback links for pool distribution: https://poolbay.io/crypto/54/decred , https://dcrstats.com/pow ._ }
 
-Distribution of 1,000 blocks actually [mined](https://miningpoolstats.stream/decred) by {date}: {PoolName n%, ...}.
+Distribution of 1,000 blocks actually [mined](https://miningpoolstats.stream/decred) by Nov 1: F2Pool 57%, Poolin 33%, (likely) AntPool 6%, BTC.com 3.6%, CoinMine 0.9%.
 
-**Staking**: [Ticket price](https://dcrdata.decred.org/charts?chart=ticket-price&axis=time&visibility=true-true&mode=stepped) {_monthly zoom_} varied between {n}-{n} DCR, with 30-day [average](https://dcrstats.com/) at {n.n} DCR (+{n.n}). { use same t1-t2 for zoom }
+![](https://raw.githubusercontent.com/bochinchero/dcrsnapshots/main/2022-10/700/Hashrate%20Distribution%20(Phs).png) { upload }
 
-The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&scale=linear&bin=day&axis=time) {_monthly zoom_} was {n.nn}-{n.nn} million DCR, meaning that {n.n}-{n.n}% of the circulating supply [participated](https://dcrdata.decred.org/charts?chart=stake-participation&scale=linear&bin=day&axis=time) {_monthly zoom_} in Proof of Stake.
+_Image: Pool hashrate distribution._
+
+**Staking**: [Ticket price](https://dcrdata.decred.org/charts?chart=ticket-price&axis=time&visibility=true-true&mode=stepped) varied between 224-246 DCR, with 30-day [average](https://dcrstats.com/) at 233.7 DCR (+4.6).
+
+The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&scale=linear&bin=day&axis=time) was 9.33-9.51 million DCR, meaning that 64.0-65.0% of the circulating supply [participated](https://dcrdata.decred.org/charts?chart=stake-participation&scale=linear&bin=day&axis=time) in Proof of Stake.
 
 { _Add a recap of ticket price action if it was interesting._ }
 
-**VSP**: The [{} listed VSPs](https://decred.org/vsp/) collectively managed ~{n} (+{n}) live tickets, which was {n.n}% of the ticket pool (+{n.n}%) as of {date}.
+**VSP**: The [17 listed VSPs](https://decred.org/vsp/) collectively managed ~6,800 (-1,020) live tickets, which was 16.7% of the ticket pool (-2.4%) as of Nov 1. Note: these figures exclude vspd.stakey.com, which is having [API issues](https://github.com/decred/dcrwebapi/pull/171) and reports outdated data. Assuming that 1,332 live tickets on Oct 3 was its last correct reporting, and that its voting wallets [have been functional](https://github.com/decred/dcrwebapi/pull/171#issuecomment-1279775352), we can [estimate](https://docs.decred.org/proof-of-stake/overview/) that roughly 500 tickets were still live on Nov 1. With this assumption, the change in totals was less dramatic: ~7,300 (-520) live tickets, or 17.9% of the ticket pool (-1.2%).
 
 { _Optional: mention biggest gainers_ }
 
-**Nodes**: [Decred Mapper](https://nodes.jholdstock.uk/user_agents) observed {} dcrd nodes on {date}: v{} - {n}%, ...
+**Nodes**: [Decred Mapper](https://nodes.jholdstock.uk/user_agents) observed 157 dcrd nodes on Nov 1: v1.7.0 - 10%, v1.7.1 - 27%, v1.7.2 - 15%, v1.7.4 - 10%, v1.7.5 - 23%, v1.8.0 dev builds - 4%, other 11%.
 
-{ _Optional_ } The share of [mixed coins](https://dcrdata.decred.org/charts?chart=coin-supply&zoom=jz3q237o-la8vk000&scale=linear&bin=day&axis=time&visibility=true-true-true) varied between {n.n}-{n.n}%. Daily [mixed amount](https://dcrdata.decred.org/charts?chart=privacy-participation&bin=day&axis=time) {_monthly zoom_} varied between {n}-{n}K DCR.
+{ _Optional_ } The share of [mixed coins](https://dcrdata.decred.org/charts?chart=coin-supply&zoom=jz3q237o-la8vk000&scale=linear&bin=day&axis=time&visibility=true-true-true) varied between 60.7-71.0%. Daily [mixed amount](https://dcrdata.decred.org/charts?chart=privacy-participation&bin=day&axis=time) varied between 293-461K DCR.
 
-{ _Optional_ } Decred's [Lightning Network](https://ln-map.jholdstock.uk/) explorer has seen {} nodes (+{}), {} channels (+{}) with a total capacity of {n.n} DCR (+{n.n}), as of {date}.
+{ _Optional_ } Decred's Lightning Network explorer has seen 69 nodes (-1), 112 channels (+7) with a total capacity of 46.9 DCR (+4.4), as of Nov 1. Thanks to @karamble for providing the data while the [LN map](https://ln-map.jholdstock.uk/) is on maintenance.
 
 { _Add any interesting analysis or events in the network._ }
 
@@ -436,7 +444,7 @@ Most information from third parties is relayed directly from the source after a 
 
 Credits (alphabetical order):
 
-- writing, editing, publishing: { bee, bochinchero, Exitus, jz, l1ndseymm, phoenixgreen, richardred }
+- writing, editing, publishing: { bee, bochinchero, Exitus, jz, karamble, l1ndseymm, phoenixgreen, richardred }
 - reviews and feedback: davecgh
 - title image: {}
 - funding: Decred stakeholders
