--- a/journal/202210.md
+++ b/journal/202210.md
@@ -177,7 +177,6 @@ _[dcrdocs](https://github.com/decred/dcrdocs) is the source code for Decred [use
 
 _[dcrweb](https://github.com/decred/dcrweb) is the source code for the [decred.org](https://decred.org/) website._
 
-- Added [ChangeNOW](https://github.com/decred/dcrweb/pull/1093) exchange and specified direct DCR URLs for other instant exchanges that support it.
 - Removed [mobile wallets](https://github.com/decred/dcrweb/pull/1092) from the [Wallets page](https://decred.org/wallets/) because they are no longer maintained.
 - Updated all links and tags for [v1.7.5 release](https://github.com/decred/dcrweb/pull/1091). 
 - Added [category filters](https://github.com/decred/dcrweb/pull/1090) to `/news`. This allows viewers to easily switch between Software Releases, Decred Journal, Press Releases, and media Coverage of Decred. Each category has a [direct link](https://decred.org/news/#software_releases) and they work without JavaScript.
@@ -276,11 +275,17 @@ The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&sc
 
 { _Check https://github.com/decred/dcrwebapi/commits/master for changes to the VSP list._ }
 
+Biggest VSP [stakey.com](http://vspd.stakey.com/) is having issues since around Sep 20 when it had 2,183 tickets - 28% of all VSP tickets or 5% of all live tickets. The [API endpoint](https://vspd.stakey.com/api/v3/vspinfo) does not respond and the data returned by decred.org [VSP API](https://api.decred.org/?c=vsp) is outdated. Service operator @dema501 [commented](https://github.com/decred/dcrwebapi/pull/171#issuecomment-1279775352) that voting wallets are functional but the API server is in limbo. [Missed Votes](https://dcrdata.decred.org/charts?chart=missed-votes) chart at dcrdata confirms there have been no spikes in missed tickets as of Nov 14.
+
 { _Check https://github.com/decred/dcrwebapi/pulls for new VSPs under review._ }
 
 { _Check #ecosystem room for news._ }
 
+Binance [added DCR](https://twitter.com/binance/status/1582933735019663361) to its [Simple Earn Flexible Products](https://www.binance.com/en/support/announcement/binance-adds-new-assets-to-simple-earn-flexible-products-2022-10-20-87e0f4b74c884d83b09ae4f3c2fd7b82). The service allows to deposit DCR for a flexible amount of time and receive daily rewards (about 2.5% APR according to [one report](https://matrix.to/#/!teQafvHMYpIbqLIieU:decred.org/$pmPmtx4rOLeKs5NUZl-Dg4YxgUZQwGQwd5hQLkqRT3g?via=decred.org&via=matrix.org&via=t2bot.io)). Simple Earn has [replaced](https://www.binance.com/en/support/announcement/introducing-simple-earn-the-evolution-of-binance-savings-binance-staking-b067f764f4f14e5aa46cca1bf2b55ab8) Binance Savings and Binance Staking platforms, and its [Flexible Products](https://www.binance.com/en/support/faq/get-started-with-binance-simple-earn-flexible-products-3bd1a6eba20a445da1e94bf6cfa52e80) component is a new name for Flexible Savings.
+
 { _Check https://github.com/decred/dcrweb/commits/master for added/removed services._ }
+
+[ChangeNOW](https://github.com/decred/dcrweb/pull/1093) was added to [Exchanges](https://decred.org/exchanges/) list at decred.org
 
 Warning: the authors of the Decred Journal have no idea about the trustworthiness of any of the services above. Please do your own research before trusting your personal information or assets to any entity.
 
