--- a/journal/202210.md
+++ b/journal/202210.md
@@ -284,20 +284,17 @@ Join our [#ecosystem](https://chat.decred.org/#/room/#ecosystem:decred.org) chat
 
 ## Outreach
 
-{ _Summarize outreach/communications/marketing/PR activity for past month and any short-term plans. "Outreach" is anything about "sending our message out". Here is the "big picture" stuff while Events and Media go into the details._ }
+Monde PR's achievements: 
 
-Monde PR’s achievements: 
-
-- Pitched one news update
-- Secured two media interviews 
-- Responded to five requests for comments
+- Pitched 1 news update.
+- Secured 2 media interviews. 
+- Responded to 5 requests for comments.
 
 Secured the following news articles:
 
-- @jy-p was interviewed on the [Digital Cash Network Podcast](https://www.youtube.com/watch?v=SzUtXnoJBbc), talking about Decred’s hybrid consensus model. 
-- An Axios article featuring comments from @jz on the future of crypto and privacy was posted on [NYC Crypto](https://nyccrypto.io/?p=96803)
-- An article in [BeInCrypto](https://br.beincrypto.com/planos-governo-lula-haddad-registrados-blockchain/) on how Decred’s blockchain was used in Brazil’s presidential election to combat fake news
-
+- @jy-p was interviewed on the [Digital Cash Network Podcast](https://www.youtube.com/watch?v=SzUtXnoJBbc), talking about Decred's hybrid consensus model.
+- An Axios article featuring comments from @jz on the future of crypto and privacy was posted on [NYC Crypto](https://nyccrypto.io/?p=96803).
+- An article in [BeInCrypto](https://br.beincrypto.com/planos-governo-lula-haddad-registrados-blockchain/) on how Decred's blockchain was used in Brazil's presidential election to combat fake news.
 
 
 ## Events
