Media add translations

--- a/journal/202210.md
+++ b/journal/202210.md
@@ -343,7 +343,7 @@ Secured the following news articles:
 
 **Translations:**
 
-- {}
+- Decred Journal August-September 2022 got 2 new [translations](https://xaur.github.io/decred-news/). Thanks to @arij (Arabic) and @Dominic (Chinese)!
 
 **Non-English content:**
 
