--- a/journal/202210.md
+++ b/journal/202210.md
@@ -349,11 +349,11 @@ Secured the following news articles:
 { _Add links to text posts on DM when available for the videos_ }
 
 - [Jake Yocom-Piatt on Decred's PoW/PoS Hybrid And Hostile Miner Troubles](https://www.youtube.com/watch?v=SzUtXnoJBbc) by Joël Valenzuela of Digital Cash Network - also as a [podcast](https://anchor.fm/digitalcashnetwork/episodes/Jake-Yocom-Piatt-on-Decreds-PoWPoS-Hybrid-And-Hostile-Miner-Troubles-e1q1b0t)
-- [Decred News Update - Brazil's future President uses time-stamping, LTC Markets on DEX, Dcrd v1.7.5](https://youtu.be/OOWQ7sxr43E) by @Exitus
-- [Discovering DCRDEX Markets page - DCRDEX Fundamentals](https://youtu.be/67cduOxn7JM) by @PhoenixGreen - also as a [text post](https://www.decredmagazine.com/discovering-dcrdex-markets-page/)
-- [DCRDEX First Look - DecredDEX Fundamentals](https://youtu.be/S4fVlYmo2Vk) by @PhoenixGreen - also as a [text post](https://www.decredmagazine.com/dcrdex-first-look-decreddex-fundamentals/)
-- [Peer to Peer Exchange - The future is here - Decred DCRDEX](https://youtu.be/oBrJgG-x9UY) by @PhoenixGreen - also as a [text post](https://www.decredmagazine.com/peer-to-peer-exchange-the-future-is-here-decred-dcrdex/)
-- [But Who is in Charge of Decred? - Decred and the state of the market feat. Eduardo Lima](https://youtu.be/COfKWnl7IYs) by @PhoenixGreen and @Exitus - discussing @elima\_iii's [research paper](https://twitter.com/elima_iii/status/1567977181682479105) ([GDoc](https://docs.google.com/document/d/1xiFYTU5aFthkUs9gIK1elNKJACsaZf4r/edit), [mirror](https://www.decredmagazine.com/whos-in-charge-of-decred-state-of-the-market/))
+- [Decred News Update - Brazil's future President uses time-stamping, LTC Markets on DEX, Dcrd v1.7.5](https://www.youtube.com/watch?v=OOWQ7sxr43E) by @Exitus
+- [Discovering DCRDEX Markets page - DCRDEX Fundamentals](https://www.youtube.com/watch?v=67cduOxn7JM) by @PhoenixGreen - also as a [text post](https://www.decredmagazine.com/discovering-dcrdex-markets-page/)
+- [DCRDEX First Look - DecredDEX Fundamentals](https://www.youtube.com/watch?v=S4fVlYmo2Vk) by @PhoenixGreen - also as a [text post](https://www.decredmagazine.com/dcrdex-first-look-decreddex-fundamentals/)
+- [Peer to Peer Exchange - The future is here - Decred DCRDEX](https://www.youtube.com/watch?v=oBrJgG-x9UY) by @PhoenixGreen - also as a [text post](https://www.decredmagazine.com/peer-to-peer-exchange-the-future-is-here-decred-dcrdex/)
+- [But Who is in Charge of Decred? - Decred and the state of the market feat. Eduardo Lima](https://www.youtube.com/watch?v=COfKWnl7IYs) by @PhoenixGreen and @Exitus - discussing @elima\_iii's [research paper](https://twitter.com/elima_iii/status/1567977181682479105) ([GDoc](https://docs.google.com/document/d/1xiFYTU5aFthkUs9gIK1elNKJACsaZf4r/edit), [mirror](https://www.decredmagazine.com/whos-in-charge-of-decred-state-of-the-market/))
 
 **Art and fun:**
 
