Media add merch image

--- a/journal/202210.md
+++ b/journal/202210.md
@@ -380,7 +380,11 @@ Secured the following news articles:
 - Re-tweets: 110
 - Social media followers across all platforms and accounts: 1,020
 
-{ image: All Cards merch! }
+![](https://www.decredmagazine.com/content/images/2022/10/eynpeSQb.jpg-large.jpeg) { upload }
+
+_Image: Decred merch by @OfficialCryptos._
+
+{ _replace by a better merch image if you see it_ }
 
 
 ## Discussions
