Media add stories

--- a/journal/202210.md
+++ b/journal/202210.md
@@ -337,6 +337,8 @@ Secured the following news articles:
 
 **Selected articles:**
 
+- DCRDEX v0.5 release with Litecoin support was featured in [Top Weekly FTX Signals](https://blog.blockfolio.com/this-week-in-signal-teams-iota-decred-thorswap-7248bedfe56c) blog
+- [Understanding why people dislike NFTs (and crypto)](https://blockcommons.red/post/nfts/) by @richardred
 - [Creation of marketing content for the crypto market](https://www.decredmagazine.com/creation-of-marketing-content-for-the-crypto-market/) by @Joao
 - [Tiago Alves Dulce Developer Q&A](https://www.decredmagazine.com/tiago-alves-dulce-developer-q-a/) by @phoenixgreen
 - [Are privacy coins future proof?](https://www.decredmagazine.com/are-privacy-coins-future-proof/) by @MadScrilla1
@@ -348,12 +350,14 @@ Secured the following news articles:
 
 { _Add links to text posts on DM when available for the videos_ }
 
-- [But Who is in Charge of Decred? - Decred and the state of the market feat. Eduardo Lima](https://www.youtube.com/watch?v=COfKWnl7IYs) by @phoenixgreen and @Exitus - discussing @elima\_iii's [research paper](https://twitter.com/elima_iii/status/1567977181682479105) ([GDoc](https://docs.google.com/document/d/1xiFYTU5aFthkUs9gIK1elNKJACsaZf4r/edit), [mirror](https://www.decredmagazine.com/whos-in-charge-of-decred-state-of-the-market/))
+- [But Who is in Charge of Decred? - Decred and the state of the market feat. Eduardo Lima](https://www.youtube.com/watch?v=COfKWnl7IYs) by @phoenixgreen and @Exitus - discussing @elima\_iii's [legal research paper](https://twitter.com/elima_iii/status/1567977181682479105) ([Google Doc](https://docs.google.com/document/d/1xiFYTU5aFthkUs9gIK1elNKJACsaZf4r/edit), [mirror](https://www.decredmagazine.com/whos-in-charge-of-decred-state-of-the-market/))
 - [Peer to Peer Exchange - The future is here - Decred DCRDEX](https://www.youtube.com/watch?v=oBrJgG-x9UY) by @phoenixgreen - also as a [text post](https://www.decredmagazine.com/peer-to-peer-exchange-the-future-is-here-decred-dcrdex/)
 - [DCRDEX First Look - DecredDEX Fundamentals](https://www.youtube.com/watch?v=S4fVlYmo2Vk) by @phoenixgreen - also as a [text post](https://www.decredmagazine.com/dcrdex-first-look-decreddex-fundamentals/)
 - [Discovering DCRDEX Markets page - DCRDEX Fundamentals](https://www.youtube.com/watch?v=67cduOxn7JM) by @phoenixgreen - also as a [text post](https://www.decredmagazine.com/discovering-dcrdex-markets-page/)
 - [Decred News Update - Brazil's future President uses time-stamping, LTC Markets on DEX, Dcrd v1.7.5](https://www.youtube.com/watch?v=OOWQ7sxr43E) by @Exitus
 - [Jake Yocom-Piatt on Decred's PoW/PoS Hybrid And Hostile Miner Troubles](https://www.youtube.com/watch?v=SzUtXnoJBbc) by Joël Valenzuela of Digital Cash Network - also as a [podcast](https://anchor.fm/digitalcashnetwork/episodes/Jake-Yocom-Piatt-on-Decreds-PoWPoS-Hybrid-And-Hostile-Miner-Troubles-e1q1b0t)
+
+Many Decred videos are available in audio podcast format on Anchor's [Decred Magazine](https://anchor.fm/decred-magazine) podcast. It was renamed from [Decred Society](https://anchor.fm/decred-society) to make it a community podcast rather than a personal one.
 
 **Art and fun:**
 
@@ -366,7 +370,7 @@ Secured the following news articles:
 
 **Non-English content:**
 
-- {}
+- Information on how to verify Lula's and Haddad's political plans on [timestamp.decred.org](https://timestamp.decred.org/) was published on [Fernando Haddad](https://en.wikipedia.org/wiki/Fernando_Haddad)'s [official website](https://haddadoficial.com.br/lula-e-haddad-registram-plano-de-governo-em-blockchain-para-evitar-fake-news/) (Portuguese). This story was also covered on [Cointelegraph Brasil](https://cointelegraph.com.br/news/lula-and-haddad-register-government-plan-on-blockchain) (independently from the [BeInCrypto](https://br.beincrypto.com/planos-governo-lula-haddad-registrados-blockchain/) story secured by Monde PR).
 
 [Decred Magazine](https://www.decredmagazine.com/) engagement stats for October:
 
