--- a/journal/202210.md
+++ b/journal/202210.md
@@ -43,35 +43,17 @@ Contents: { _Sync ToC at the very end, when all text is finished_ }
 
 ## Core Software v1.7.5 Released
 
-{ highlights, links, signature check reminder, optional image }
+Highlights of the [v1.7.5 release](https://twitter.com/decredproject/status/1581003123287461888):
 
-https://github.com/decred/decred-binaries/releases/tag/v1.7.5
+- **dcrd** got UTXO cache updates to improve its robustness, optimize it, and correct some hard to hit corner cases that involve a mix of manual block invalidation, conditional flushing, and successive unclean shutdowns.
 
-#### dcrd v1.7.5
+- **dcrwallet** gained a method for importing public keys to watching-only wallets, and gRPC methods to command VSPs how they should vote on treasury spends. Fixes include: `signrawtransaction` now respects the private keys passed to it, auto ticket buyer no longer attempts to mix change if the server is unknown, and the list of nodes discovered from seeders is no longer limited to a deprecated SPV version. Finally, this release enforces testnet3 hardfork to prevent ASICs from halting the test network.
 
-- This is a patch release of dcrd that updates the utxo cache to improve its
-robustness, optimize it, and correct some hard to hit corner cases that involve
-a mix of manual block invalidation, conditional flushing, and successive unclean
-shutdowns.
+- **Decredition** was mainly updated due to a critical fix included in DCRDEX v0.5.4. Other small bug fixes and improvements include a fix of the never ending loading button on the Treasury Spending tab.
 
-#### dcrwallet v1.7.5
+Visit the [GitHub release](https://github.com/decred/decred-binaries/releases) for the full list of changes and downloads. As always, we recommend to [verify the files](https://docs.decred.org/advanced/verifying-binaries) before running.
 
-- dcrwallet has been updated to follow the TestNet3 hard fork which throttles the difficulty changes
-allowed as hashpower is quickly increased on the network. This was an unvoted
-hard fork that only affects the test network, and all users of the test network
-must upgrade.
-
-#### Decredition v1.7.5
-
-- This release is mainly due to a critical fix that was included in DEX 0.5.4.
-There are other small bug fixes and improvements included as well, notably, the never ending loading button on the Treasury Spending tab was fixed.
-
-
-## DCRDEX v0.5.4 Released
-
-{ what was fixed, maybe drop this section and resort to Dev/DCRDEX if too small. (IMO too small, dex section contains enough - exitus) }
-
-https://github.com/decred/dcrdex/releases/tag/v0.5.4
+Users of the standalone **DCRDEX app** should upgrade to the [latest release here](https://github.com/decred/dcrdex/releases), specifically to avoid issues with certain Taproot transactions on Bitcoin, which were fixed in v0.5.4 and v0.5.5.
 
 
 ## Development
