Eco takes mobile wallets from Dev

--- a/journal/202210.md
+++ b/journal/202210.md
@@ -178,7 +178,6 @@ _[dcrdocs](https://github.com/decred/dcrdocs) is the source code for Decred [use
 
 _[dcrweb](https://github.com/decred/dcrweb) is the source code for the [decred.org](https://decred.org/) website._
 
-- Removed [mobile wallets](https://github.com/decred/dcrweb/pull/1092) from the [Wallets page](https://decred.org/wallets/) because they are no longer maintained.
 - Updated all links and tags for [v1.7.5 release](https://github.com/decred/dcrweb/pull/1091). 
 - Added [category filters](https://github.com/decred/dcrweb/pull/1090) to `/news`. This allows viewers to easily switch between Software Releases, Decred Journal, Press Releases, and media Coverage of Decred. Each category has a [direct link](https://decred.org/news/#software_releases) and they work without JavaScript.
 - Added DCRDEX v0.5 [Press Release](https://github.com/decred/dcrweb/pull/1085). { _reported in September's Media, maybe drop_ }
@@ -189,8 +188,6 @@ _[dcrweb](https://github.com/decred/dcrweb) is the source code for the [decred.o
 - Renamed "Press" to "News" and [added a link](https://github.com/decred/dcrweb/pull/1084) to `/news` in the header navigation bar, making [Decred News](https://decred.org/news/) more accessible. 
 - Added [`/vsp` link](https://github.com/decred/dcrweb/pull/1084) to footer so users can easily find Voting Service Providers.
 - Moved [Internationalization (translation) content into sub-directories](https://github.com/decred/dcrweb/pull/1086). This fixes an issue where translated Press Releases were not displayed in non-English languages, and allowed the removal of over 100 empty files.
-
-{ _maybe move some content updates to Ecosystem_ }
 
 { _image: news page screenshot_ }
 
@@ -279,7 +276,10 @@ Biggest VSP [stakey.com](http://vspd.stakey.com/) is having issues since around 
 
 Binance [added DCR](https://twitter.com/binance/status/1582933735019663361) to its [Simple Earn Flexible Products](https://www.binance.com/en/support/announcement/binance-adds-new-assets-to-simple-earn-flexible-products-2022-10-20-87e0f4b74c884d83b09ae4f3c2fd7b82). The service allows to deposit DCR for a flexible amount of time and receive daily rewards (about 2.5% APR according to [one report](https://matrix.to/#/!teQafvHMYpIbqLIieU:decred.org/$pmPmtx4rOLeKs5NUZl-Dg4YxgUZQwGQwd5hQLkqRT3g?via=decred.org&via=matrix.org&via=t2bot.io)). Simple Earn has [replaced](https://www.binance.com/en/support/announcement/introducing-simple-earn-the-evolution-of-binance-savings-binance-staking-b067f764f4f14e5aa46cca1bf2b55ab8) Binance Savings and Binance Staking platforms, and its [Flexible Products](https://www.binance.com/en/support/faq/get-started-with-binance-simple-earn-flexible-products-3bd1a6eba20a445da1e94bf6cfa52e80) component is a new name for Flexible Savings.
 
-[ChangeNOW](https://github.com/decred/dcrweb/pull/1093) was added to [Exchanges](https://decred.org/exchanges/) list at decred.org
+decred.org updates:
+
+- Added [ChangeNOW](https://github.com/decred/dcrweb/pull/1093) to [Exchanges page](https://decred.org/exchanges/).
+- Removed [mobile wallets](https://github.com/decred/dcrweb/pull/1092) from [Wallets page](https://decred.org/wallets/) because they are no longer maintained.
 
 Warning: the authors of the Decred Journal have no idea about the trustworthiness of any of the services above. Please do your own research before trusting your personal information or assets to any entity.
 
