--- a/journal/202210.md
+++ b/journal/202210.md
@@ -251,11 +251,19 @@ _Image: Pool hashrate distribution._
 
 The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&scale=linear&bin=day&axis=time) was 9.33-9.51 million DCR, meaning that 64.0-65.0% of the circulating supply [participated](https://dcrdata.decred.org/charts?chart=stake-participation&scale=linear&bin=day&axis=time) in Proof of Stake.
 
+![]({}) { upload }
+
+_Image: Staked DCR broke 9.5 million._
+
 **VSP**: The [17 listed VSPs](https://decred.org/vsp/) collectively managed ~6,800 (-1,020) live tickets, which was 16.7% of the ticket pool (-2.4%) as of Nov 1. Note: these figures exclude vspd.stakey.com, which is having [API issues](https://github.com/decred/dcrwebapi/pull/171) and reports outdated data. Assuming that 1,332 live tickets on Oct 3 was its last correct reporting, and that its voting wallets [have been functional](https://github.com/decred/dcrwebapi/pull/171#issuecomment-1279775352), we can [estimate](https://docs.decred.org/proof-of-stake/overview/) that roughly 500 tickets were still live on Nov 1. With this assumption, the change in totals was less dramatic: ~7,300 (-520) live tickets, or 17.9% of the ticket pool (-1.2%).
 
 { _Optional: mention biggest gainers_ }
 
 **Nodes**: [Decred Mapper](https://nodes.jholdstock.uk/user_agents) observed 157 dcrd nodes on Nov 1: v1.7.0 - 10%, v1.7.1 - 27%, v1.7.2 - 15%, v1.7.4 - 10%, v1.7.5 - 23%, v1.8.0 dev builds - 4%, other 11%.
+
+![]({}) { upload }
+
+_Image: Reachable dcrd node versions._
 
 { _Optional_ } The share of [mixed coins](https://dcrdata.decred.org/charts?chart=coin-supply&zoom=jz3q237o-la8vk000&scale=linear&bin=day&axis=time&visibility=true-true-true) varied between 60.7-71.0%. Daily [mixed amount](https://dcrdata.decred.org/charts?chart=privacy-participation&bin=day&axis=time) varied between 293-461K DCR.
 
