Eco move BR elections adoption from Media

--- a/journal/202210.md
+++ b/journal/202210.md
@@ -281,6 +281,10 @@ decred.org updates:
 - Added [ChangeNOW](https://github.com/decred/dcrweb/pull/1093) to [Exchanges page](https://decred.org/exchanges/).
 - Removed [mobile wallets](https://github.com/decred/dcrweb/pull/1092) from [Wallets page](https://decred.org/wallets/) because they are no longer maintained.
 
+Decred adoption:
+
+- Government plans from Brazilian presidential candidate Lula da Silva and São Paulo government candidate Fernando Haddad were timestamped on Decred blockchain to combat fake news. This can be verified by downloading the PDFs from the [announcement](https://haddadoficial.com.br/lula-e-haddad-registram-plano-de-governo-em-blockchain-para-evitar-fake-news/), computing their SHA-256 and checking those hashes on [timestamp.decred.org](https://timestamp.decred.org/). Previously in Brazil, Decred timestamping was used in Haddad's [2018 campaign](https://web.archive.org/web/20181106225509/https://www.obrasilfelizdenovo.com/haddad-blockchain-bitcoin-plano-governo/) for the president, and in 2020 São Paulo [municipal elections](https://www.decredmagazine.com/how-decred-how-decred-contributed-to-a-more-transparent-election-in-brazil/) via the [VotoLegal](https://blockchain.votolegal.com.br/) platform.
+
 Warning: the authors of the Decred Journal have no idea about the trustworthiness of any of the services above. Please do your own research before trusting your personal information or assets to any entity.
 
 Join our [#ecosystem](https://chat.decred.org/#/room/#ecosystem:decred.org) chat to follow Decred ecosystem updates.
@@ -352,7 +356,7 @@ Many Decred videos are available in audio podcast format on Anchor's [Decred Mag
 
 **Non-English content:**
 
-- Information on how to verify Lula's and Haddad's political plans on [timestamp.decred.org](https://timestamp.decred.org/) was published on [Fernando Haddad](https://en.wikipedia.org/wiki/Fernando_Haddad)'s [official website](https://haddadoficial.com.br/lula-e-haddad-registram-plano-de-governo-em-blockchain-para-evitar-fake-news/) (Portuguese). This story was also covered on [Cointelegraph Brasil](https://cointelegraph.com.br/news/lula-and-haddad-register-government-plan-on-blockchain) (independently from the [BeInCrypto](https://br.beincrypto.com/planos-governo-lula-haddad-registrados-blockchain/) story secured by Monde PR).
+- [Lula e Haddad registram plano de governo em blockchain para evitar fake news](https://haddadoficial.com.br/lula-e-haddad-registram-plano-de-governo-em-blockchain-para-evitar-fake-news/) (Portuguese) - the story was covered by [Cointelegraph Brasil](https://cointelegraph.com.br/news/lula-and-haddad-register-government-plan-on-blockchain) and [BeInCrypto](https://br.beincrypto.com/planos-governo-lula-haddad-registrados-blockchain/).
 
 [Decred Magazine](https://www.decredmagazine.com/) engagement stats for October:
 
