--- a/journal/202210.md
+++ b/journal/202210.md
@@ -307,20 +307,6 @@ Secured the following news articles:
 
 ## Media
 
-{ _Put notable community content efforts or new projects at the beginning. e.g. a new website, new podcast series, or an important guide how to make the network more robust._ }
-
-{ _Hint: For bullet lists below, use the following format: [Sentence case title]({link}) by @author - optional comment._ }
-
-{ _Scan these to find more Media and Discussions:_
-
-- https://twitter.com/decredproject
-- https://www.reddit.com/r/decred/new/
-- Matrix #media
-- Matrix #marketing
-- Matrix #general
-
-}
-
 **Selected articles:**
 
 - DCRDEX v0.5 release with Litecoin support was featured in [Top Weekly FTX Signals](https://blog.blockfolio.com/this-week-in-signal-teams-iota-decred-thorswap-7248bedfe56c) blog
@@ -333,8 +319,8 @@ Secured the following news articles:
 [Decred Magazine](https://www.decredmagazine.com/) engagement stats for October:
 
 - Total number of articles on DM: 334
-- Newsletter subscribers: 72
-- New DM Posts and Newsletters sent: 16
+- Current newsletter subscribers: 72
+- Total newsletters sent: 16
 - Active social media campaigns: 15
 - Completed social media campaigns: 17
 - Social media posts: 120
@@ -343,10 +329,6 @@ Secured the following news articles:
 - Social media followers across all platforms and accounts: 1,020
 
 **Videos:**
-
-{ _Scan https://www.youtube.com/results?search_query=decred&sp=CAI%253D ._ }
-
-{ _Add links to text posts on DM when available for the videos_ }
 
 - [But Who is in Charge of Decred? - Decred and the state of the market feat. Eduardo Lima](https://www.youtube.com/watch?v=COfKWnl7IYs) by @phoenixgreen and @Exitus - discussing @elima\_iii's [legal research paper](https://twitter.com/elima_iii/status/1567977181682479105) ([Google Doc](https://docs.google.com/document/d/1xiFYTU5aFthkUs9gIK1elNKJACsaZf4r/edit), [mirror](https://www.decredmagazine.com/whos-in-charge-of-decred-state-of-the-market/))
 - [Peer to Peer Exchange - The future is here - Decred DCRDEX](https://www.youtube.com/watch?v=oBrJgG-x9UY) by @phoenixgreen - also as a [text post](https://www.decredmagazine.com/peer-to-peer-exchange-the-future-is-here-decred-dcrdex/)
@@ -359,7 +341,7 @@ Many Decred videos are available in audio podcast format on Anchor's [Decred Mag
 
 **Art and fun:**
 
-- [Decred holding all cards](https://www.decredmagazine.com/decred-holding-all-cards/) by @OfficialCryptos - merch with this artwork is [available on Redbubble](https://www.redbubble.com/people/OfficialCryptos/explore?page=1&sortOrder=recent)!
+- [Decred holding all cards](https://www.decredmagazine.com/decred-holding-all-cards/) by @OfficialCryptos - merch with this design is [available on Redbubble](https://www.redbubble.com/people/OfficialCryptos/explore?page=1&sortOrder=recent) (and apparently it is timestamped)
 - [Decred is money evolved!](https://www.decredmagazine.com/decred-is-money-evolved/) by @OfficialCryptos
 
 **Translations:**
