--- a/journal/202210.md
+++ b/journal/202210.md
@@ -361,20 +361,9 @@ _Image: Decred merch by @OfficialCryptos._
 
 ## Discussions
 
-Comm systems news:
-
-- { _e.g. added/removed chant channels, changes how comms work, etc_ }
-
-{ _Hint: Interesting discussions that generated new ideas or perspectives._ }
-
 Selected Reddit posts:
 
-- [Embrace Degeneracy](https://www.reddit.com/r/decred/comments/yhaqfe/embrace_degeneracy/) by u/ersfbddfgwe
-
-
-Selected Twitter discussions:
-
-- {}
+- [Embrace Degeneracy](https://www.reddit.com/r/decred/comments/yhaqfe/embrace_degeneracy/) - an idea by u/ersfbddfgwe to target marketing and branding to modern degen trends.
 
 
 ## Markets
