Markets image caption, cleanup

--- a/journal/202210.md
+++ b/journal/202210.md
@@ -370,9 +370,9 @@ Selected Reddit posts:
 
 In October DCR was trading between USD 23.50-29.90 / BTC 0.00128-0.00152. The average daily rate was $26.27.
 
-{ _Optional: Markets overview, USD and BTC price trends, highs and lows, interesting events, interesting analysis._ }
+![]({}) { upload }
 
-{ _DCRDEX updates, esp. trading volume dynamics._ }
+_Image: DCRDEX monthly volume in USD._
 
 
 ## Relevant External
