--- a/journal/202210.md
+++ b/journal/202210.md
@@ -385,15 +385,13 @@ _Image: DCRDEX monthly volume in USD._
 
 { _L2+ tech: "Smart" contracts, DEX projects._ }
 
-October was a big month for crypto hacks and exploits, by the 13th there had [already](https://www.coindesk.com/tech/2022/10/13/october-becomes-worst-month-for-crypto-hacks-with-two-weeks-to-go/) been 11 different DeFi attacks in which $718 million was obtained by hackers. One that stands out is Mango Markets, which was [hit](https://www.coindesk.com/markets/2022/10/12/how-market-manipulation-led-to-a-100m-exploit-on-solana-defi-exchange-mango/) for a $100M exploit when a trader manipulated some prices to borrow all of the assets on the platform. One of the attackers [tweeted](https://twitter.com/avi_eisen/status/1581326197241180160) about a "highly profitable trading strategy" which they had engaged in, after a settlement had been negotiated with the platform which would allow other depositors to regain access to their funds. Another quirk of the story is that the attacker made a proposal to resolve the situation with no criminal charges and the [voted](https://twitter.com/alex_valaitis/status/1580017142132805632) for it with some of the tokens they obtained from the exploit.
+October was a big month for crypto hacks and exploits, by the 13th there had [already](https://www.coindesk.com/tech/2022/10/13/october-becomes-worst-month-for-crypto-hacks-with-two-weeks-to-go/) been 11 different DeFi attacks in which $718 million was obtained by hackers. One that stands out is Mango Markets, which was [hit](https://www.coindesk.com/markets/2022/10/12/how-market-manipulation-led-to-a-100m-exploit-on-solana-defi-exchange-mango/) for a $100M exploit when a trader manipulated some prices to borrow all of the assets on the platform. One of the attackers [tweeted](https://twitter.com/avi_eisen/status/1581326197241180160) about a "highly profitable trading strategy" which they had engaged in, after a settlement had been negotiated with the platform which would allow other depositors to regain access to their funds. Another quirk of the story is that the attacker made a proposal to resolve the situation with no criminal charges and then [voted](https://twitter.com/alex_valaitis/status/1580017142132805632) for it with some of the tokens they obtained from the exploit.
 
 Kim Kardashian has [settled](https://www.coindesk.com/business/2022/10/03/us-sec-charges-kim-kardashian-for-promoting-ethereummax/) with the SEC, agreeing to pay $1.26M over her undisclosed shilling of EthereumMax in 2021. SEC Chief Gary Gensler has been [promoting](https://twitter.com/GaryGensler/status/1576897535427448832) this as a big win.
 
-Rune's "Endgame" proposal for Maker DAO has been approved, and it has been [noted](https://twitter.com/SebVentures/status/1584875892555268096) that the majority of delegated MKR voting for it is controlled by Rune.
+Rune's "Endgame" proposal for MakerDAO has been approved, and it has been [noted](https://twitter.com/SebVentures/status/1584875892555268096) that the majority of delegated MKR voting for it is controlled by Rune.
 
-
-
-mango 
+mango { mango? any RelExt missing? }
 
 { _Governance, finances, funding, chain forks, community splits._ }
 
