Intro ideas, sync ToC

--- a/journal/202210.md
+++ b/journal/202210.md
@@ -4,29 +4,29 @@
 
 _Image: { "Title by @author. Description..." OR just "Description..." }_
 
-{ _Month's highlights, no links here, 5-7 bullets max._
+Highlights of October: {
 
-- 
+- Core v1.7.5 and DCRDEX v0.5.4 patch releases
 
-- 
+- timestamp.decred.org used to timestamp BR political campaign documents
 
-- 
+- decred.org got another batch of work including the new News page
 
-- 
+- Monde PR prolonged for another year
 
 - 
 
 }
 
-Contents: { _Sync ToC at the very end, when all text is finished_ }
+Contents:
 
+- [Core Software v1.7.5 Released](#core-software-v175-released)
 - [Development](#development)
 - [People](#people)
 - [Governance](#governance)
 - [Network](#network)
 - [Ecosystem](#ecosystem)
 - [Outreach](#outreach)
-- [Events](#events)
 - [Media](#media)
 - [Discussions](#discussions)
 - [Markets](#markets)
@@ -398,5 +398,5 @@ Credits (alphabetical order):
 
 - writing, editing, publishing: { bee, bochinchero, Exitus, jz, karamble, l1ndseymm, phoenixgreen, richardred }
 - reviews and feedback: davecgh
-- title image: {}
+- title image: { Exitus }
 - funding: Decred stakeholders
