--- a/journal/202210.md
+++ b/journal/202210.md
@@ -121,20 +121,19 @@ User-facing changes merged in `master`:
 - Restyled the [Markets page](https://github.com/decred/dcrdex/pull/1825) and made it responsive across desktop, tablet and mobile layouts.
 - Reject [invalid addresses](https://github.com/decred/dcrdex/pull/1840) on Send form. Also fixed handling when fee estimation is unsupported or has failed, so that sending is possible even without fee estimates.
 - Support [custom wallet path](https://github.com/decred/dcrdex/pull/1870) for Electrum wallets. Also, support unprotected Electrum wallets (those having no password).
-- Updated [Chinese translation](https://github.com/decred/dcrdex/pull/1871).
 - Show an error when the user attempts to logout while having [active orders](https://github.com/decred/dcrdex/pull/1904).
-- Fixed the [accelerate order button](https://github.com/decred/dcrdex/pull/1847) not hiding after the swap tx is mined.
 - Added a [form](https://github.com/decred/dcrdex/pull/1916) to delete archived records (orders and matches) from the client, and an option to export deleted records as CSV files.
+- Updated [Chinese translation](https://github.com/decred/dcrdex/pull/1871).
+- Fixed the [accelerate order button](https://github.com/decred/dcrdex/pull/1847) not hiding after the swap tx is mined.
 - Fixed multiple UI bugs on the [Markets page](https://github.com/decred/dcrdex/pull/1890).
 - Fixed a case where clients could stay unaware that their [orders have been revoked](https://github.com/decred/dcrdex/pull/1865) due to an upcoming market suspension.
 - ~2 other bug fixes.
 
 Internal and developer changes:
 
-- Fixed recovery for [not connected wallets](https://github.com/decred/dcrdex/pull/1891) and added support for recovering disabled wallets.
-- Implemented foundations for DCR [fidelity bonds](https://github.com/decred/dcrdex/pull/1818): bond transaction structure, common interfaces to create/broadcast/refund bonds (for client), parsing and validation of bond tx (for server). Time-locked [fidelity bonds](https://en.wikipedia.org/wiki/Fidelity_bond) will replace the current registration fee system. Bonds will be redeemable by the user who posted the bond after a certain time, to create an opportunity cost to use DCRDEX instead of a simple monetary cost. It also is a prerequisite for building a [server mesh](https://github.com/decred/dcrdex/issues/1765). To make the transition smoother, the client and server retain all the legacy registration fee machinery, and the clients continue to use the legacy registration system for now.
 - Numerous improvements to test stability, localization system, and the documentation.
 - Expire [request timeouts](https://github.com/decred/dcrdex/pull/1915) when WebSocket connection is closed, to avoid hangs on shutdown.
+- Fixed recovery for [not connected wallets](https://github.com/decred/dcrdex/pull/1891) and added support for recovering disabled wallets.
 - Fixed [locked balance](https://github.com/decred/dcrdex/pull/1918) calculation for ZEC. This required to implement a workaround for the wallet not unlocking spent coins automatically. Currently DOGE and ZEC require this quirk.
 - Fixed and improved [simnet tests](https://github.com/decred/dcrdex/pull/1909). Most tests will run twice, alternating the maker and taker between clients. This has helped to discover a few bugs.
 - Fixed HTML template parsing for keys [containing dash](https://github.com/decred/dcrdex/pull/1923) (welcome to DCRDEX, [@norwnd](https://github.com/decred/dcrdex/commits?author=norwnd)!).
@@ -145,6 +144,10 @@ Ethereum support:
 - Improved [ETH wallet](https://github.com/decred/dcrdex/pull/1893) connection management.
 - Added [gas limits](https://github.com/decred/dcrdex/pull/1894) in ETH and ETH token wallets so that at most 1/4 of the gas limit of a block can be filled up by a swap or redeem transaction. This should prevent some huge [unswappable orders](https://github.com/decred/dcrdex/issues/1771).
 - Implemented [RPC client](https://github.com/decred/dcrdex/pull/1832) for communicating with an Ethereum node over WebSockets, HTTP or IPC connections.
+
+Fidelity bonds:
+
+- Implemented foundations for DCR [fidelity bonds](https://github.com/decred/dcrdex/pull/1818): bond transaction structure, common interfaces to create/broadcast/refund bonds (for client), parsing and validation of bond tx (for server). Time-locked [fidelity bonds](https://en.wikipedia.org/wiki/Fidelity_bond) will replace the current registration fee system. Bonds will be redeemable by the user who posted the bond after a certain time, to create an opportunity cost to use DCRDEX instead of a simple monetary cost. It also is a prerequisite for building a [server mesh](https://github.com/decred/dcrdex/issues/1765). To make the transition smoother, the client and server retain all the legacy registration fee machinery, and the clients continue to use the legacy registration system for now.
 
 ![](https://user-images.githubusercontent.com/6109680/187043904-3aedd9ed-86e3-42ba-bcf3-a3273b51f97c.png) { upload }
 
@@ -165,15 +168,15 @@ _[dcrdocs](https://github.com/decred/dcrdocs) is the source code for Decred [use
 
 _[dcrweb](https://github.com/decred/dcrweb) is the source code for the [decred.org](https://decred.org/) website._
 
-- Updated all links and tags for [v1.7.5 release](https://github.com/decred/dcrweb/pull/1091). 
-- Added [category filters](https://github.com/decred/dcrweb/pull/1090) to `/news`. This allows viewers to easily switch between Software Releases, Decred Journal, Press Releases, and media Coverage of Decred. Each category has a [direct link](https://decred.org/news/#software_releases) and they work without JavaScript.
-- Added "News" translation for [Polish and Chinese](https://github.com/decred/dcrweb/pull/1084).
-- Ensure news items are always [sorted](https://github.com/decred/dcrweb/pull/1084) by date.
-- Added a large number of [news posts](https://github.com/decred/dcrweb/pull/1084) consisting of previous releases.
-- Fixed [overlapping](https://github.com/decred/dcrweb/pull/1084) text and buttons on press page.
-- Renamed "Press" to "News" and [added a link](https://github.com/decred/dcrweb/pull/1084) to `/news` in the header navigation bar, making [Decred News](https://decred.org/news/) more accessible. 
-- Added [`/vsp` link](https://github.com/decred/dcrweb/pull/1084) to footer so users can easily find Voting Service Providers.
 - Moved [Internationalization (translation) content into sub-directories](https://github.com/decred/dcrweb/pull/1086). This fixes an issue where translated Press Releases were not displayed in non-English languages, and allowed the removal of over 100 empty files.
+- Added [`/vsp` link](https://github.com/decred/dcrweb/pull/1084) to footer so users can easily find Voting Service Providers.
+- Renamed "Press" to "News" and [added a link](https://github.com/decred/dcrweb/pull/1084) to `/news` in the header navigation bar, making [Decred News](https://decred.org/news/) more accessible. 
+- Added a large number of [news posts](https://github.com/decred/dcrweb/pull/1084) consisting of previous releases.
+- Ensure news items are always [sorted](https://github.com/decred/dcrweb/pull/1084) by date.
+- Added [category filters](https://github.com/decred/dcrweb/pull/1090) to `/news`. This allows viewers to easily switch between Software Releases, Decred Journal, Press Releases, and media Coverage of Decred. Each category has a [direct link](https://decred.org/news/#software_releases) and they work without JavaScript.
+- Updated all links and tags for [v1.7.5 release](https://github.com/decred/dcrweb/pull/1091). 
+- Added "News" translation for [Polish and Chinese](https://github.com/decred/dcrweb/pull/1084).
+- Fixed [overlapping](https://github.com/decred/dcrweb/pull/1084) text and buttons on press page.
 
 ![]({}) { upload }
 
