rel ext addition

--- a/journal/202210.md
+++ b/journal/202210.md
@@ -383,9 +383,7 @@ October was a big month for crypto hacks and exploits, by the 13th there had [al
 
 Kim Kardashian has [settled](https://www.coindesk.com/business/2022/10/03/us-sec-charges-kim-kardashian-for-promoting-ethereummax/) with the SEC, agreeing to pay $1.26M over her undisclosed shilling of EthereumMax in 2021. SEC Chief Gary Gensler has been [promoting](https://twitter.com/GaryGensler/status/1576897535427448832) this as a big win.
 
-Rune's "Endgame" proposal for MakerDAO has been approved, and it has been [noted](https://twitter.com/SebVentures/status/1584875892555268096) that the majority of delegated MKR voting for it is controlled by Rune.
-
-mango { mango? any RelExt missing? }
+Rune's "Endgame" proposal for MakerDAO has been approved, and it has been [noted](https://twitter.com/SebVentures/status/1584875892555268096) that the majority of delegated MKR voting for it is controlled by Rune. MakerDAO has also [voted](https://cointelegraph.com/news/makerdao-goes-ahead-with-500m-investment-in-treasuries-and-bonds) to first approve a pilot transaction of $1 Million in US Treasury bonds custodied with Coinbase, following this up with [confirmation](https://cointelegraph.com/news/makerdao-goes-ahead-with-500m-investment-in-treasuries-and-bonds) that $1.6 Billion would be invested with Coinbase in this way, earning 1.5% yield that will support protocol development and other work. 
 
 That's all for October. Share your updates for the next issue in our [#journal](https://chat.decred.org/#/room/#journal:decred.org) chat room.
 
