--- a/journal/202210.md
+++ b/journal/202210.md
@@ -276,7 +276,7 @@ Decred's Lightning Network explorer has seen 69 nodes (-1), 112 channels (+7) wi
 
 Biggest VSP [stakey.com](http://vspd.stakey.com/) is having issues since around Sep 20 when it had 2,183 tickets, or 28% of all VSP tickets and 5% of all live tickets. The [API endpoint](https://vspd.stakey.com/api/v3/vspinfo) does not respond and the data returned by decred.org [VSP API](https://api.decred.org/?c=vsp) is outdated. Service operator @dema501 [commented](https://github.com/decred/dcrwebapi/pull/171#issuecomment-1279775352) that voting wallets are functional but the API server is in limbo. [Missed Votes](https://dcrdata.decred.org/charts?chart=missed-votes) chart at dcrdata confirms there have been no spikes in missed tickets as of Nov 14.
 
-Binance [added DCR](https://twitter.com/binance/status/1582933735019663361) to its [Simple Earn Flexible Products](https://www.binance.com/en/support/announcement/binance-adds-new-assets-to-simple-earn-flexible-products-2022-10-20-87e0f4b74c884d83b09ae4f3c2fd7b82). The service allows to deposit DCR for a flexible amount of time and receive daily rewards (about 2.5% APR according to [one report](https://matrix.to/#/!teQafvHMYpIbqLIieU:decred.org/$pmPmtx4rOLeKs5NUZl-Dg4YxgUZQwGQwd5hQLkqRT3g?via=decred.org&via=matrix.org&via=t2bot.io)). Simple Earn has [replaced](https://www.binance.com/en/support/announcement/introducing-simple-earn-the-evolution-of-binance-savings-binance-staking-b067f764f4f14e5aa46cca1bf2b55ab8) Binance Savings and Binance Staking platforms, and its [Flexible Products](https://www.binance.com/en/support/faq/get-started-with-binance-simple-earn-flexible-products-3bd1a6eba20a445da1e94bf6cfa52e80) component is a new name for Flexible Savings.
+Binance [added DCR](https://twitter.com/binance/status/1582933735019663361) to its [Simple Earn Flexible Products](https://www.binance.com/en/support/announcement/binance-adds-new-assets-to-simple-earn-flexible-products-2022-10-20-87e0f4b74c884d83b09ae4f3c2fd7b82). The service allows one to deposit DCR for a flexible amount of time and receive daily rewards (about 2.5% APR according to [one report](https://matrix.to/#/!teQafvHMYpIbqLIieU:decred.org/$pmPmtx4rOLeKs5NUZl-Dg4YxgUZQwGQwd5hQLkqRT3g?via=decred.org&via=matrix.org&via=t2bot.io)). Simple Earn has [replaced](https://www.binance.com/en/support/announcement/introducing-simple-earn-the-evolution-of-binance-savings-binance-staking-b067f764f4f14e5aa46cca1bf2b55ab8) Binance Savings and Binance Staking platforms, and its [Flexible Products](https://www.binance.com/en/support/faq/get-started-with-binance-simple-earn-flexible-products-3bd1a6eba20a445da1e94bf6cfa52e80) component is a new name for Flexible Savings.
 
 decred.org updates:
 
