--- a/journal/202211.md
+++ b/journal/202211.md
@@ -1,4 +1,4 @@
-# {DRAFT} Decred Journal – {month} {year}
+# {DRAFT} Decred Journal – November 2022
 
 { _Only remove DRAFT from the title when all other todos are solved, at the very end. Search for `{` to see what's left._ }
 
@@ -299,7 +299,7 @@ Community stats as of {date} (compared to {date}):
 
 { _Hint: Currently this is a mix of finances and governance. We may add the separate Finances section in the future._ }
 
-In {month} the new [treasury](https://dcrdata.decred.org/treasury) received {n} DCR worth ${} at {month}'s average rate of ${}. {} DCR was spent to pay contractors, worth ${} at {month}'s rate, or ${} at {prev month}'s billing rate of ${}.
+In November the new [treasury](https://dcrdata.decred.org/treasury) received {n} DCR worth ${} at November's average rate of ${}. {} DCR was spent to pay contractors, worth ${} at November's rate, or ${} at October's billing rate of $26.27.
 
 The [treasury spend tx]({}) had {} outputs making payments to contractors, ranging from {} DCR to {} DCR.
 
@@ -322,7 +322,7 @@ See Politeia Digest [issue {}]({}) for more details on the month's proposals.
 
 { _Hint: n, n.n, and n.nn tell how many decimals to keep, e.g. 100, 16.5, 8.63_ }
 
-**Hashrate**: {month}'s [hashrate](https://dcrdata.decred.org/charts?chart=hashrate&scale=linear&bin=day&axis=time) opened at ~{n} Ph/s and closed ~{n} Ph/s, bottoming at {n} Ph/s and peaking at {n} Ph/s throughout the month.
+**Hashrate**: November's [hashrate](https://dcrdata.decred.org/charts?chart=hashrate&scale=linear&bin=day&axis=time) opened at ~{n} Ph/s and closed ~{n} Ph/s, bottoming at {n} Ph/s and peaking at {n} Ph/s throughout the month.
 
 Distribution of {} Ph/s hashrate [reported](https://miningpoolstats.stream/decred) by the pools on {date}: {PoolName n%, ...}.
 
@@ -414,6 +414,8 @@ Join our [#ecosystem](https://chat.decred.org/#/room/#ecosystem:decred.org) chat
 
 - {}
 
+Many Decred videos are available in audio format on [Decred Magazine podcast](https://anchor.fm/decred-magazine) on Anchor and all the common podcast platforms like Spotify or Apple.
+
 **Audio:**
 
 - {}
@@ -433,10 +435,6 @@ Join our [#ecosystem](https://chat.decred.org/#/room/#ecosystem:decred.org) chat
 
 ## Discussions
 
-Comm systems news:
-
-- { _e.g. added/removed chant channels, changes how comms work, etc_ }
-
 { _Hint: Interesting discussions that generated new ideas or perspectives._ }
 
 Selected Reddit posts:
@@ -450,7 +448,7 @@ Selected Twitter discussions:
 
 ## Markets
 
-In {month} DCR was trading between USD {n.nn}-{n.nn} / BTC {n.nnnnn}-{n.nnnnn}. The average daily rate was ${n.nn}.
+In November DCR was trading between USD {n.nn}-{n.nn} / BTC {n.nnnnn}-{n.nnnnn}. The average daily rate was ${n.nn}.
 
 { _Optional: Markets overview, USD and BTC price trends, highs and lows, interesting events, interesting analysis._ }
 
@@ -473,18 +471,18 @@ In {month} DCR was trading between USD {n.nn}-{n.nn} / BTC {n.nnnnn}-{n.nnnnn}. 
 
 { _Other: Regulations, privacy, security, fun._ }
 
-That's all for {month}. Share your updates for the next issue in our [#journal](https://chat.decred.org/#/room/#journal:decred.org) chat room.
+That's all for November. Share your updates for the next issue in our [#journal](https://chat.decred.org/#/room/#journal:decred.org) chat room.
 
 
 ## About
 
-This is issue {number} of Decred Journal. Index of all issues, mirrors, and translations is available [here](https://xaur.github.io/decred-news/).
+This is issue 53 of Decred Journal. Index of all issues, mirrors, and translations is available [here](https://xaur.github.io/decred-news/).
 
 Most information from third parties is relayed directly from the source after a minimal sanity check. The authors of the Decred Journal cannot verify all claims. Please beware of scams and do your own research.
 
 Credits (alphabetical order):
 
-- writing, editing, publishing: {}
+- writing, editing, publishing: { bee, bochinchero, Exitus, jz, l1ndseymm, phoenixgreen, richardred }
 - reviews and feedback: {}
 - title image: {}
 - funding: Decred stakeholders
