--- a/journal/202211.md
+++ b/journal/202211.md
@@ -251,7 +251,9 @@ _[dcrweb](https://github.com/decred/dcrweb) is the source code for the [decred.o
 
 ### Other
 
-- { _Smaller/common things go here._ }
+- { https://matheusd.com/post/op_peel/ }
+  - https://matrix.to/#/!kqBAIpKYUzqYFVHorm:decred.org/$TXdw-JqCGgOXCsV9Ey1tY2xgnsl5CDja7CGOKpO7rzs?via=decred.org&via=matrix.org
+- { @dcrtimestampbot repo news }
 
 { _Check for new/updated repos in:_
 
@@ -361,6 +363,10 @@ The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&sc
 
 { _Check https://github.com/decred/dcrweb/commits/master for added/removed services._ }
 
+{ dcrtimestampbot running again }
+
+{ remind of citadel.stakey.net instance, ask if invite link still works }
+
 Warning: the authors of the Decred Journal have no idea about the trustworthiness of any of the services above. Please do your own research before trusting your personal information or assets to any entity.
 
 Join our [#ecosystem](https://chat.decred.org/#/room/#ecosystem:decred.org) chat to follow Decred ecosystem updates.
@@ -418,7 +424,7 @@ Many Decred videos are available in audio format on [Decred Magazine podcast](ht
 
 **Audio:**
 
-- {}
+- { First twitter audio https://twitter.com/i/spaces/1OdKrzMMXOXKX , tell what are "spaces" }
 
 **Art and fun:**
 
@@ -466,6 +472,17 @@ In November DCR was trading between USD {n.nn}-{n.nn} / BTC {n.nnnnn}-{n.nnnnn}.
 { _L2+ tech: "Smart" contracts, DEX projects._ }
 
 { _Governance, finances, funding, chain forks, community splits._ }
+
+https://cointelegraph.com/news/makerdao-co-founder-nikolai-mushegian-dies-at-29-in-puerto-rico { relevant? }
+
+{ LBRY lawsuit story (LBRY powers Odysee):
+
+- https://decrypt.co/113754/lbry-loses-sec-case-dangerous-precedent-crypto
+- https://cointelegraph.com/news/sec-wins-lbry-case-but-the-victory-may-have-little-impact-in-the-greater-cryptoverse
+- https://www.coindesk.com/policy/2022/11/07/lbry-sold-tokens-as-securities-federal-judge-rules/
+- https://www.reuters.com/legal/transactional/us-securities-regulators-win-case-against-crypto-company-lbry-2022-11-07/
+
+}
 
 { _Relevant exchanges and websites._ }
 
