--- a/journal/202211.md
+++ b/journal/202211.md
@@ -90,7 +90,45 @@ _[Decrediton](https://github.com/decred/decrediton) is a full-featured desktop w
 
 { _Check_ https://github.com/decred/decrediton/commits/master }
 
-- {}
+The Wallet Launcher has been [redesigned](https://github.com/decred/decrediton/pull/3690).
+
+- Added onboarding tutorials to the launcher.
+- Added gradients to the wallet cards. One gradient is connected to an exact wallet and saved to the config. 
+- Moved the redesigned progress bar to the bottom. 
+- Removed the 'RescanWallet' component. The rescan progress is integrated now into the progress bar and the onboarding tutorials list is displayed during the progress.
+- Introduced a new progress bar indication of the fetching block headers process.
+- Added a Trezor wallet setup option.
+- Added an Automated Wallet Launching modal. User choice is saved to config.
+
+DEX:
+
+- Fixed problem where DEX window [wouldn't launch](https://github.com/decred/decrediton/pull/3831) after reloading UI.
+- When changing [wallet passphrase](https://github.com/decred/decrediton/pull/3822), users can enter their DEX app password to propagate the changes to their DEX account. {confusing, need to update}
+- [Removed](https://github.com/decred/decrediton/pull/3800) all BTC wallet type selection and added tests for the DEX.
+- [Bumped](https://github.com/decred/decrediton/pull/3834) DCRDEX to v0.5.6.
+
+Other changes: {need to update Controlactions section}
+
+- Fixed issue where [focus](https://github.com/decred/decrediton/pull/3839) between seed words was lost on the Trezor word modal.
+- Applied [proxy settings](https://github.com/decred/decrediton/pull/3803) to dcrd and dcrwallet when the proxy type is SOCKS 5. With this, users can configure dcrd/dcrwallet as a Tor client. (img candidate)
+- Added [translations](https://github.com/decred/decrediton/pull/3719) for Greek.
+- Fixed an issue in the Lightning Network tab where the "Close Channel" button was [hidden](https://github.com/decred/decrediton/pull/3796) in inactive channels.
+- Voting preferences now [update asynchronously](https://github.com/decred/decrediton/pull/3801). Developer bgptr reports that the process takes 3 times faster on mainnet (3 seconds vs 11 seconds). The error handling was also improved. (img candidate).
+- Fixes to transactions action (update).
+- Finished [testing](https://github.com/decred/decrediton/pull/3821) of 'ControlActions'. Also discarded the unused importPrivateKey code and introduced accountMocks which contains shared mocks with AccountMixerActions tests. (more)
+- Removed all [legacy stakepool related code](https://github.com/decred/decrediton/pull/3808). Also cleaned up the code structure relating to ticket purchases and auto buyer. The privacy tab now properly shows that mixes are created every 10 minutes, not 20.
+- Redesigned the [Trezor wallet viewpage](https://github.com/decred/decrediton/pull/3570). (img candidate)
+- Automated tests for 'DaemonActions'.
+- Added [links to documentation](https://github.com/decred/decrediton/pull/3802) in the form of question mark blurbs throughout the wallet.
+- Recently updated VSPs now have vote choices [resent](https://github.com/decred/decrediton/pull/3738).
+- Added [internal ticket spent](https://github.com/decred/decrediton/pull/3778) and transaction fee links on the transactions details page.
+- Various [CSS fixes](https://github.com/decred/decrediton/pull/3805).
+- Fixed blockchain download [time estimation](https://github.com/decred/decrediton/pull/3815) during syncing.
+- [Fixes](https://github.com/decred/decrediton/pull/3804) to 'filterUnlockableAccounts'.
+- Revamped [transaction normalizers](https://github.com/decred/decrediton/pull/3777).
+- Renamed win32ipc to dcrwin32ipc to [avoid problems](https://github.com/decred/decrediton/pull/3828) with a a remote suspiscious package of the same name.
+- [Upgrades](https://github.com/decred/decrediton/pull/3826) to 'pi-ui'.
+- [Bumped](https://github.com/decred/decrediton/pull/3832) electron from 17.4.2 to 18.3.7.
 
 
 ### Politeia
