--- a/journal/202211.md
+++ b/journal/202211.md
@@ -212,6 +212,7 @@ _[dcrros](https://github.com/decred/dcrros) is a middleware service that provide
 
 { _Check_ https://github.com/decred/dcrros/commits/master }
 
+- Switched the stable version of the 'dcrror' Dockerfile to use the recently tagged [v0.2.0 version](https://github.com/decred/dcrros/pull/30).
 - [Updated](https://github.com/decred/dcrros/pull/27) master to release v1.7.5.
 
 
