--- a/journal/202211.md
+++ b/journal/202211.md
@@ -194,16 +194,8 @@ _[dcrdata](https://github.com/decred/dcrdata) is an explorer for Decred blockcha
 
 { _Check_ https://github.com/decred/dcrdata/commits/master }
 
-- {}
+- Fixed various frontend bugs, importantly ones relating to [treasury spends and adds](https://github.com/decred/dcrdata/pull/1933).
 
-
-### TinyDecred
-
-_[TinyDecred](https://github.com/decred/tinydecred) is a Python toolkit for integrating Decred. It includes an experimental light GUI wallet based on PyQt5._
-
-{ _Check_ https://github.com/decred/tinydecred/commits/master }
-
-- {}
 
 
 ### Rosetta
