--- a/journal/202211.md
+++ b/journal/202211.md
@@ -133,7 +133,16 @@ _[Politeia](https://github.com/decred/politeia) is Decred's proposal system. It 
 
 }
 
-- {}
+Navigation [Improvements](https://github.com/decred/politeiagui/pull/2866):
+
+- Core navigation global service,
+- Dynamically update page titles according to proposal's name.
+- Added "Go Back" link and fix legacy errors.
+
+Other:
+
+- Added [tests](https://github.com/decred/politeiagui/pull/2876) for UI components.
+- Core API [error fixes](https://github.com/decred/politeiagui/pull/2872) and end-to-end fixes.
 
 
 ### vspd
