--- a/journal/202211.md
+++ b/journal/202211.md
@@ -70,7 +70,12 @@ _[dcrwallet](https://github.com/decred/dcrwallet) is a wallet server used by com
 
 { _Check_ https://github.com/decred/dcrwallet/commits/master }
 
-- {}
+- Added 'TSpendPolicies' and 'SetTSpendPolicy' requests. This will allow decrediton to now get and update the [pending tspend policies](https://github.com/decred/dcrwallet/pull/2172).
+- Hex seed [wallet restoration](https://github.com/decred/dcrwallet/pull/2192) no longer requires an additional newline.
+- Allowed [piping the answers](https://github.com/decred/dcrwallet/pull/2191) to the '--create' prompts to work properly for not only the initial passphrase prompt, but the confirmation as well.
+- Updated [dcrd packages](https://github.com/decred/dcrwallet/pull/2189) to their current (non-released) in-progress versions.
+- Updated the [major version](https://github.com/decred/dcrwallet/pull/2189) of the decred.org/dcrwallet module to version 3 and updated all dependencies of current in-progress modules from 'dcrd' to their corresponding major versions.
+- Code cleanup.
 
 
 
