--- a/journal/202211.md
+++ b/journal/202211.md
@@ -140,7 +140,7 @@ _[Politeia](https://github.com/decred/politeia) is Decred's proposal system. It 
 
 Navigation [Improvements](https://github.com/decred/politeiagui/pull/2866):
 
-- Core navigation global service,
+- Added Core navigation global service.
 - Dynamically update page titles according to proposal's name.
 - Added "Go Back" link and fix legacy errors.
 
